# HackUNT_AlphaGuard_-AI

./: db.sqlite3  manage.py  readme.md  requirements.txt
Backend/: .gitignore  manage.py  pyproject.toml  requirements.txt
Backend/Hack_UNT/: asgi.py  settings.py  urls.py  wsgi.py
Backend/audio_processing/: nlp_analysis.py  scam_detection.py  transcription.py  urls.py  views.py
Backend/call_processor/: apps.py  views.py
Frontend/spam-call-filter/spam-call-filter/: package-lock.json  package.json
Frontend/spam-call-filter/spam-call-filter/src/app/: page.tsx
Frontend/spam-call-filter/spam-call-filter/src/components/: call-chart.tsx  call-log.tsx  call-transcription.tsx  dashboard.tsx  enhanced-spinner.tsx
Frontend/spam-call-filter/spam-call-filter/src/lib/: api.ts
Hack_UNT/: asgi.py  settings.py  urls.py  wsgi.py
LLM_scams/: FullTranscriptData.xlsx  app.py  augmented_phone_scams.csv  data.py  get_kaggle_data.py  labeled_phone_messages.csv  labeling.py  merge_dataset.py  model_v1.py  model_v2.py  non-scam-transc.py  non_scam_phone_messages.csv  numpy.ipynb  preprocessed_dataset.csv  scam_phone_messages.csv  score.py  tfidf_vectorizer.joblib  train.ipynb
audio_processing/: apps.py  transcription.py  urls.py  views.py
call-hook-app/AndroidApplication/app/: build.gradle.kts
call-hook-app/AndroidApplication/app/src/main/: AndroidManifest.xml
call-hook-app/AndroidApplication/app/src/main/java/com/example/androidapplication/: AudioRecorder.kt  CallReciever.kt  MainActivity.kt  (+2 more)
call-hook-app/AndroidApplication/gradle/wrapper/: gradle-wrapper.properties
